--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,13 +1,13 @@
-a{transition: transform .19s cubic-bezier(0.55, 0, 0.55, 0.2) , color .3s cubic-bezier(0.55, 0, 0.55, 0.2);
+.navbar-links a{transition: transform .19s cubic-bezier(0.55, 0, 0.55, 0.2) , color .3s cubic-bezier(0.55, 0, 0.55, 0.2);
     transform-origin: center; 
     display: inline-block; 
     }
- a:hover {
-      color: rgb(233, 212, 5);
+ .navbar-links a:hover {
+      color: rgb(239, 208, 16);
       transform:  scale(1.2) !important;
     }
-    a:active{
-        color: rgb(224, 207, 49);
+   .navbar-links  a:active{
+        color: rgb(239, 208, 16);
         transition-duration: 0s;
         transform: scale(1) !important;
     }
